--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "seir-flex-04-07-20-cyberpunk-2020",
+  "name": "sei-r-classroom-website",
   "private": true,
   "description": "A Website for Administering GA Lecture, Lab, and Homework Material",
   "version": "0.1.0",
