--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sei-r-classroom-website",
+  "name": "seir-classroom-website",
   "private": true,
   "description": "A Website for Administering GA Lecture, Lab, and Homework Material",
   "version": "0.1.0",
@@ -40,12 +40,5 @@
   },
   "devDependencies": {
     "prettier": "^1.19.1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/GA-Dallas/seir-flex-04-07-20"
-  },
-  "bugs": {
-    "url": "https://github.com/GA-Dallas/seir-flex-04-07-20/issues"
   }
 }
