--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gatsby-plugin-offline": "^3.0.38",
     "gatsby-plugin-react-helmet-async": "^1.0.15",
     "gatsby-plugin-sass": "^2.1.28",
+    "gatsby-plugin-scroll-indicator": "^1.0.0",
     "gatsby-remark-autolink-headers": "^2.3.15",
     "gatsby-remark-prismjs": "^3.3.31",
     "gatsby-remark-responsive-iframe": "^2.2.33",
