--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gatsby-plugin-breadcrumb": "^7.0.0",
     "gatsby-plugin-catch-links": "^2.1.25",
     "gatsby-plugin-html-attributes": "^1.0.5",
+    "gatsby-plugin-layout": "^2.13.0",
     "gatsby-plugin-manifest": "^2.2.45",
     "gatsby-plugin-netlify": "^2.3.0",
     "gatsby-plugin-offline": "^3.0.38",
