--- a/package.json
+++ b/package.json
@@ -15,35 +15,39 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.27",
-    "@fortawesome/free-brands-svg-icons": "^5.12.1",
-    "@fortawesome/react-fontawesome": "^0.1.8",
-    "algoliasearch": "^4.10.2",
-    "gatsby": "^2.23.7",
-    "gatsby-plugin-breadcrumb": "^7.0.0",
-    "gatsby-plugin-catch-links": "^2.1.25",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.15",
+    "acorn": "^8.4.1",
+    "algoliasearch": "^4.10.5",
+    "babel-eslint": "^10.1.0",
+    "gatsby": "^3.0.0",
+    "gatsby-plugin-breadcrumb": "^12.1.1",
+    "gatsby-plugin-catch-links": "^3.13.0",
     "gatsby-plugin-html-attributes": "^1.0.5",
     "gatsby-plugin-layout": "^2.13.0",
-    "gatsby-plugin-manifest": "^2.2.45",
-    "gatsby-plugin-netlify": "^2.3.0",
-    "gatsby-plugin-offline": "^3.0.38",
-    "gatsby-plugin-react-helmet-async": "^1.0.15",
-    "gatsby-plugin-sass": "^2.1.28",
-    "gatsby-plugin-scroll-indicator": "^1.0.0",
-    "gatsby-remark-autolink-headers": "^2.3.15",
-    "gatsby-remark-prismjs": "^3.3.31",
-    "gatsby-remark-responsive-iframe": "^2.2.33",
-    "gatsby-source-filesystem": "^2.1.48",
-    "gatsby-transformer-remark": "^2.6.50",
-    "prismjs": "^1.19.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-helmet-async": "^1.0.4",
-    "react-instantsearch-dom": "^6.11.2",
-    "react-transition-group": "^4.3.0",
-    "sass": "^1.32.8"
+    "gatsby-plugin-manifest": "^3.13.0",
+    "gatsby-plugin-netlify": "^3.13.0",
+    "gatsby-plugin-offline": "^4.13.0",
+    "gatsby-plugin-react-helmet-async": "^1.2.0",
+    "gatsby-plugin-sass": "^4.13.0",
+    "gatsby-plugin-scroll-indicator": "^1.0.1",
+    "gatsby-remark-autolink-headers": "^4.10.0",
+    "gatsby-remark-prismjs": "^5.10.0",
+    "gatsby-remark-responsive-iframe": "^4.10.0",
+    "gatsby-source-filesystem": "^3.13.0",
+    "gatsby-transformer-remark": "^4.10.0",
+    "postcss": "^8.3.6",
+    "prismjs": "^1.24.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-helmet-async": "^1.1.2",
+    "react-instantsearch-dom": "^6.12.1",
+    "react-transition-group": "^4.4.2",
+    "sass": "^1.39.0",
+    "typescript": "^4.4.2"
   },
   "devDependencies": {
-    "prettier": "^1.19.1"
+    "prettier": "^2.3.2"
   }
 }
