--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "gatsby-remark-responsive-iframe": "^4.10.0",
     "gatsby-source-filesystem": "^3.13.0",
     "gatsby-transformer-remark": "^4.10.0",
+    "path": "^0.12.7",
     "postcss": "^8.3.6",
     "prismjs": "^1.24.1",
     "react": "^17.0.2",
